<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KaoShiTi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
<string name="huanying">欢迎光临 </string>
    <string name="yong_hu_ming">请输入用户名 </string>
     <string name="mi_ma">请输入密码 </string>
     <string name="deng_lu">登录 </string>
     <string name="zhu_ce">注册 </string>
       <string name="ti_jiao">提交 </string>
        <string name="ying_xiong">英雄联盟 </string>
          
</resources>
